[package]
name = "xsparseset"
version = "0.1.4"
edition = "2018"
description = "A rust sparse set"
readme = "README.md"
repository = "https://github.com/xstater/xsparseset/"
documentation = "https://docs.rs/xsparseset/"
license = "MIT"
keywords = ["sparse-set","data-structure","ecs",]
categories = ["data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
