[package]
name = "xsparseset"
version = "0.2.3"
edition = "2018"
description = "A rust sparse set"
readme = "README.md"
repository = "https://github.com/xstater/xsparseset/"
documentation = "https://docs.rs/xsparseset/"
license = "MIT"
keywords = ["sparse-set","data-structure","ecs",]
categories = ["data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

[[bench]]
name = "sparse_storage"
harness = false